<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_menu"/>
    <TextView
            android:hint="(Enter name in Edit Profile)"
            android:text="John Doe"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/dashboard_username"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_current_tasks" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/current_tasks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_current_tasks" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/edit_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_edit_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_chats" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/skills"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_skills"
            app:layout_constraintTop_toBottomOf="@+id/btn_edit_profile" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/task_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_task_history"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_traits" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_task_history" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/traits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_traits"
            app:layout_constraintTop_toBottomOf="@+id/btn_skills" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/sign_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_sign_out"
            app:layout_constraintTop_toBottomOf="@+id/btn_settings" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <Button
            android:text="Chats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_chats" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.547"
            app:layout_constraintTop_toBottomOf="@+id/btn_current_tasks"/>

</androidx.constraintlayout.widget.ConstraintLayout>

