<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@android:color/holo_orange_light">

    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:id="@+id/edit_text_email"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/email"
            android:background="@drawable/rounded_edittext" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="56dp" app:layout_constraintTop_toBottomOf="@+id/detask_logo"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edit_text_password"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintStart_toStartOf="@+id/edit_text_email"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_email"
            android:hint="@string/password"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_email"/>
    <Button
            android:text="@string/sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:id="@+id/button_sign_in" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
            app:layout_constraintStart_toStartOf="@+id/edit_text_password"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_password" android:layout_marginEnd="8dp"
            android:textColor="@android:color/white"/>
    <TextView
            android:text="@string/dont_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_register" android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_in"
            app:layout_constraintStart_toStartOf="@+id/button_sign_in"
            app:layout_constraintEnd_toEndOf="@+id/button_sign_in"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressbar"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/edit_text_email"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/text_view_register"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp" app:srcCompat="@drawable/detask"
            android:id="@+id/detask_logo" android:layout_marginTop="128dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.496"/>
</androidx.constraintlayout.widget.ConstraintLayout>