...
                android:id="@+id/layoutHead"
                android:background="@android:color/holo_orange_light"
                android:layout_width="match_parent"
                android:layout_height="200dp">

            <ImageView
                    android:id="@+id/image_view"
                    android:background="@drawable/ic_boy"
                    android:layout_centerInParent="true"
                    android:layout_width="90dp"
                    android:layout_height="90dp"/>

            <EditText
...
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/button_save"
                    android:layout_marginTop="15dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/rounded_button"
                    android:textAllCaps="false"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/save_changes"
...
